[package]
name = "glctl"
version = "0.1.0"
edition = "2021"
description = "Generation Lineage Control Tool — YAML-based generation tracking for AI agents"
license = "MIT"

[[bin]]
name = "glctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
